# dcc-mcp-photoshop

./: .gitignore  CHANGELOG.md  README.md  justfile  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  issue-translator.yml  release.yml
bridge/uxp-plugin/: README.md  index.html  index.js  manifest.json
bridge/uxp-plugin/src/: bridge-client.js  websocket-server.js
bridge/uxp-plugin/src/handlers/: document.js  layers.js  script.js
bridge/uxp-plugin/src/utils/: jsonrpc.js  ps-helpers.js
docs/: PRD.md
src/dcc_mcp_photoshop/: __init__.py  __main__.py  __version__.py  api.py  bridge.py  capabilities.py  cli.py  server.py
src/dcc_mcp_photoshop/skills/photoshop-document/: SKILL.md
src/dcc_mcp_photoshop/skills/photoshop-document/scripts/: get_document_info.py  list_layers.py
src/dcc_mcp_photoshop/skills/photoshop-image/: SKILL.md
src/dcc_mcp_photoshop/skills/photoshop-image/scripts/: create_document.py  export_document.py  flatten_image.py  merge_visible_layers.py  resize_canvas.py  resize_image.py  save_document.py
src/dcc_mcp_photoshop/skills/photoshop-layers/: SKILL.md
src/dcc_mcp_photoshop/skills/photoshop-layers/scripts/: create_layer.py  delete_layer.py  duplicate_layer.py  fill_layer.py  rename_layer.py  set_layer_blend_mode.py  set_layer_opacity.py  set_layer_visibility.py
src/dcc_mcp_photoshop/skills/photoshop-text/: SKILL.md
src/dcc_mcp_photoshop/skills/photoshop-text/scripts/: create_text_layer.py  get_text_layer_info.py  update_text_layer.py
tests/: conftest.py  test_api.py  test_bridge.py  test_server.py  test_skills.py
tools/: build_binary.py  install_plugin_dev.py  lint_skills.py  live_test.py  pack_plugin.py  test_mcp.py
