[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dcc-mcp-photoshop"
version = "0.1.0"
description = "Adobe Photoshop adapter for the DCC Model Context Protocol (MCP) ecosystem — bridges MCP tools to Photoshop via UXP WebSocket"
authors = [{ name = "Long Hao", email = "hal.long@outlook.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["photoshop", "adobe", "mcp", "dcc", "ai", "llm", "model-context-protocol", "uxp"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics",
]

dependencies = [
    "dcc-mcp-core>=0.12.14,<1.0.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.0",
    "ruff>=0.8.0",
    "hatchling",
]

[project.urls]
Homepage = "https://github.com/loonghao/dcc-mcp-photoshop"
Repository = "https://github.com/loonghao/dcc-mcp-photoshop"

[project.entry-points."dcc_mcp.adapters"]
photoshop = "dcc_mcp_photoshop:PhotoshopMcpServer"

[tool.hatch.build.targets.wheel]
packages = ["src/dcc_mcp_photoshop"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
